--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="assets/style.css" type="text/css">
   <title>Sport Dummy</title>
 </head>
 
@@ -19,27 +19,27 @@
   <header class="headerContainer">
     <!-------------------- Logo -------------------->
     <div class="logo-plane">
-      <img src="/images/sport-logo.jpg" alt="logo" id="logo">
+      <img src="assets/images/sport-logo.jpg" alt="logo" id="logo">
     </div>
     <!-- Header -->
     <p class="align-right weight-700">You have not yet registered to our club?
       <a href="#" class="highlighted xsm weight-700">LOGIN</a>
       <span class="white xxsm">OR</span>
       <a href="#" class="highlighted xsm weight-700">REGISTER&ensp;</a>
-      <a href="#" class="align-right"><img src="/images/twitter.png" alt="twitter" class="social-icon "></a>
-      <a href="#" class="align-right"><img src="/images/facebook.png" alt="facebook" class="social-icon"></a>
-      <a href="#" class="align-right"><img src="/images/wifi.png" alt="wifi" class="social-icon"></a>
+      <a href="#" class="align-right"><img src="assets/images/twitter.png" alt="twitter" class="social-icon "></a>
+      <a href="#" class="align-right"><img src="assets/images/facebook.png" alt="facebook" class="social-icon"></a>
+      <a href="#" class="align-right"><img src="assets/images/wifi.png" alt="wifi" class="social-icon"></a>
     </p>
   </header>
   <!-------------------- Main Navbar -------------------->
   <nav>
     <ul class="navList align-right">
-      <li class="navItem xsm">these are</li>&ensp;&ensp;
-      <li class="navItem xsm">random words</li>&ensp;&ensp;
-      <li class="navItem xsm">we use</li>&ensp;&ensp;
-      <li class="navItem xsm">to show</li>&ensp;&ensp;
-      <li class="navItem xsm">how links</li>&ensp;&ensp;
-      <li class="navItem xsm">will appear</li>
+      <a href="" class="list-item" class="list-item"><li class="navItem xsm">these are</li>&ensp;&ensp;</a>
+      <a href="" class="list-item"><li class="navItem xsm">random words</li>&ensp;&ensp;</a>
+      <a href="" class="list-item"><li class="navItem xsm">we use</li>&ensp;&ensp;</a>
+      <a href="" class="list-item"><li class="navItem xsm">to show</li>&ensp;&ensp;</a>
+      <a href="" class="list-item"><li class="navItem xsm">how links</li>&ensp;&ensp;</a>
+      <a href="" class="list-item"><li class="navItem xsm">will appear</li></a>
     </ul>
   </nav>
 
@@ -48,7 +48,7 @@
     <section>
       <!-------------------- Main Content Card 1 -------------------->
       <div class="card">
-        <img src="/images/image1.jpg" alt="content-image">
+        <img src="assets/images/image1.jpg" alt="content-image">
         <div class="textArea">
           <span>
             <p class="cardTitle white lg weight-700">Your Title</p>
@@ -60,7 +60,7 @@
       </div>
       <!-------------------- Card2 -------------------->
       <div class="card">
-        <img src="/images/image1.jpg" alt="content-image">
+        <img src="assets/images/image1.jpg" alt="content-image">
         <div class="textArea">
           <span>
             <p class="cardTitle white lg weight-700">Your Title</p>
@@ -72,7 +72,7 @@
       </div>
       <!-------------------- Card 3 -------------------->
       <div class="card">
-        <img src="/images/image1.jpg" alt="content-image">
+        <img src="assets/images/image1.jpg" alt="content-image">
         <div class="textArea">
           <span>
             <p class="cardTitle white lg weight-700">Your Title</p>
@@ -80,6 +80,7 @@
           <span>
             <p class="cardContent highlighted sm weight-700">Goes Here</p>
           </span>
+
         </div>
       </div>
     </section>
@@ -89,14 +90,12 @@
       <div class="card">
         <div class="contentTitle">
           <span>
-            <p class="cardTitle white lg weight-700">Your Title</p>
+            <p class="cardTitle white lg weight-700">Advertise Something here</p>
           </span>
-          <span>
-            <p class="cardContent highlighted sm weight-700">Goes Here</p>
-          </span>
+
         </div>
         <div class="contentArea">
-            <img src="/images/image1.jpg" alt="content-image" class="resized-md">
+            <img src="assets/images/image1.jpg" alt="content-image" class="resized-md">
             <div class="text">
             <span>
               <p class="white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
@@ -110,11 +109,9 @@
       <div class="card">
         <div class="contentTitle">
           <span>
-            <p class="cardTitle white lg weight-700">Your Title</p>
+            <p class="cardTitle white lg weight-700">Advertise Something here</p>
           </span>
-          <span>
-            <p class="cardContent highlighted xsm weight-700">Goes Here</p>
-          </span>
+
         </div>
         <div class="contentArea">
           <div class="textSpecial">
@@ -135,15 +132,13 @@
       <div class="card">
         <div class="contentTitle">
           <span>
-            <p class="cardTitle white lg weight-700">Your Title</p>
+            <p class="cardTitle white lg weight-700">Advertise Something here</p>
           </span>
-          <span>
-            <p class="cardContent highlighted xsm weight-700">Goes Here</p>
-          </span>
+   
         </div>
         <div class="contentArea">
           <div class="card-sm">
-            <img src="/images/image1.jpg" alt="content-image" class="resized-sm">
+            <img src="assets/images/image1.jpg" alt="content-image" class="resized-sm">
           </div>
           <div class="sticker">
             <div class="bg-red">
@@ -159,7 +154,7 @@
 
           </div>
           <div class="card-sm">
-            <img src="/images/image1.jpg" alt="content-image" class="resized-sm">
+            <img src="assets/images/image1.jpg" alt="content-image" class="resized-sm">
           </div>
           <div class="sticker">
             <div class="bg-red">
@@ -175,7 +170,7 @@
 
           </div>
           <div class="card-sm">
-            <img src="/images/image1.jpg" alt="content-image" class="resized-sm">
+            <img src="assets/images/image1.jpg" alt="content-image" class="resized-sm">
           </div>
           <div class="sticker">
             <div class="bg-red">
